@@ -1,6 +1,12 @@
 2007-02-05  Bastien Nocera  <hadess@hadess.net>
 
 	* freedesktop.org.xml.in: Patch from Pino Toscano
+	<toscano.pino@tiscali.it> to add a mime-type for XLIFF
+	translation files (Closes: #6532)
+
+2007-02-05  Bastien Nocera  <hadess@hadess.net>
+
+	* freedesktop.org.xml.in: Patch from Pino Toscano
 	<toscano.pino@tiscali.it> to add a mime-type for LDIF files
 	(Closes: #6482)
 
